# novel-rs

./: .gitignore  Cargo.toml  README.md  temp.txt
src/: main.rs
src/cache/: manager.rs
src/config/: app.rs  cli.rs  mod.rs  provider.rs  sites.rs
src/core/: cli.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/repository/: artist.rs  author.rs  chapter.rs  helpers.rs  mod.rs  novel.rs  novel_tag.rs  tag.rs
src/service/: convert.rs  mod.rs  novel.rs
src/site/: adapter.rs  mod.rs  provider_base.rs
src/site/content/: base.rs  mod.rs  novels.rs
src/site/docln/: converter.rs  html.rs  mod.rs  parser.rs  provider.rs
src/utils/: env.rs  http.rs  markdown.rs  mod.rs  string.rs  time.rs
