[package]
name = "novel-rs"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-stream = "0.3.6"
clap = { version = "4.5.38", features = ["derive"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
once_cell = "1.21.3"
rand = "0.9.1"
reqwest = "0.12.15"
scraper = "0.23.1"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
